# obsidian

./: .gitignore  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
Random/: Docker envs made easy.md  Makefile for dummies.md  Python projects for great good.md
docs/: index.md
docs/DevOps/: Docker envs separation.en.md  Docker envs separation.ru.md  How to writes Dockerfiles.ru.md  Makefiles for dummies.en.md  Makefiles for dummies.md  Traefik makes routing easier.ru.md  index.md
docs/Docker combinations/: index.en.md  index.md
docs/How to start a python project/: index.en.md  index.md
docs/Makefiles for dummies/: index.en.md  index.md
docs/Python/: How to start a python project.en.md  How to start a python project.md  How to start a python project.ru.md  index.en.md  index.md  index.ru.md
docs/js/: highlight.min.js
