[tool.poetry]
name = "obsidian_vault"
version = "0.1.0"
description = ""
authors = ["Pavel Kirilin <win10@list.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-static-i18n = "^0.5"

[tool.poetry.dev-dependencies]
mkdocs-material = "^7.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
