[tool.poetry]
name = "obsidian_vault"
version = "0.1.0"
description = ""
authors = ["Pavel Kirilin <win10@list.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-translations = "^0.1.1"
mkdocs-material = "^7.0.5"
pymdown-extensions = "^8.1.1"
markdown-include = "^0.6.0"
termynal = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
